--- a/templates/categories/category_new.html
+++ b/templates/categories/category_new.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-{% extends 'base.html' %}
+{% extends 'home.html' %}
+{% block title %}New Category{% endblock title %}
 {% block content %}
 <h1>New article</h1>
 <form action="" method="post">{% csrf_token %}
