--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,15 @@
 <!doctype html>
 {% load static %}
+{% load custom_tags %}
 <html>
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Snippet - BBBootstrap</title>
+    <title>Reminder
+      {% block title %}
+
+      {% endblock title %}
+    </title>
     <link href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' rel='stylesheet'>
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
@@ -31,7 +36,9 @@
               <div class="card">
                 <div class="card-body">
                   <div class="d-flex flex-row align-items-center">
-                    <input type="text" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="Add new...">
+
+                    <input type="text" class="form-control form-control-lg" id="exampleFormControlInput1"
+                           placeholder="Add new...">
                     <a href="#!" data-mdb-toggle="tooltip" title="Set due date"><i class="fas fa-calendar-alt fa-lg me-3"></i></a>
                     <div>
                       <button type="button" class="btn btn-primary">Add</button>
@@ -43,97 +50,6 @@
 
             <hr class="my-4">
             {% block content %}
-
-
-
-            <ul class="list-group list-group-horizontal rounded-0 bg-transparent">
-              <li class="list-group-item d-flex align-items-center ps-0 pe-3 py-1 rounded-0 border-0 bg-transparent">
-                <div class="form-check">
-                  <input
-                    class="form-check-input me-0"
-                    type="checkbox"
-                    value=""
-                    id="flexCheckChecked1"
-                    aria-label="..."
-                    checked
-                  />
-                </div>
-              </li>
-              <li class="list-group-item px-3 py-1 d-flex align-items-center flex-grow-1 border-0 bg-transparent">
-                <p class="lead fw-normal mb-0">Buy groceries for next week</p>
-              </li>
-              <li class="list-group-item ps-3 pe-0 py-1 rounded-0 border-0 bg-transparent">
-                <div class="d-flex flex-row justify-content-end mb-1">
-                  <a href="#!" class="text-info" data-mdb-toggle="tooltip" title="Edit todo"><i class="fas fa-pencil-alt me-3"></i></a>
-                  <a href="#!" class="text-danger" data-mdb-toggle="tooltip" title="Delete todo"><i class="fas fa-trash-alt"></i></a>
-                </div>
-                <div class="text-end text-muted">
-                  <a href="#!" class="text-muted" data-mdb-toggle="tooltip" title="Created date">
-                    <p class="small mb-0"><i class="fas fa-info-circle me-2"></i>28th Jun 2020</p></a>
-                </div>
-              </li>
-            </ul>
-            <ul class="list-group list-group-horizontal rounded-0">
-              <li class="list-group-item d-flex align-items-center ps-0 pe-3 py-1 rounded-0 border-0 bg-transparent">
-                <div class="form-check">
-                  <input
-                    class="form-check-input me-0"
-                    type="checkbox"
-                    value=""
-                    id="flexCheckChecked2"
-                    aria-label="..."
-                  />
-                </div>
-              </li>
-              <li class="list-group-item px-3 py-1 d-flex align-items-center flex-grow-1 border-0 bg-transparent">
-                <p class="lead fw-normal mb-0">Renew car insurance</p>
-              </li>
-              <li class="list-group-item px-3 py-1 d-flex align-items-center border-0 bg-transparent">
-                <div class="py-2 px-3 me-2 border border-warning rounded-3 d-flex align-items-center bg-light">
-                  <p class="small mb-0">
-                    <a href="#!" data-mdb-toggle="tooltip" title="Due on date">
-                      <i class="fas fa-hourglass-half me-2 text-warning"></i>
-                    </a>
-                    28th Jun 2020
-                  </p>
-                </div>
-              </li>
-              <li class="list-group-item ps-3 pe-0 py-1 rounded-0 border-0 bg-transparent">
-                <div class="d-flex flex-row justify-content-end mb-1">
-                  <a href="#!" class="text-info" data-mdb-toggle="tooltip" title="Edit todo"><i class="fas fa-pencil-alt me-3"></i></a>
-                  <a href="#!" class="text-danger" data-mdb-toggle="tooltip" title="Delete todo"><i class="fas fa-trash-alt"></i></a>
-                </div>
-                <div class="text-end text-muted">
-                  <a href="#!" class="text-muted" data-mdb-toggle="tooltip" title="Created date">
-                    <p class="small mb-0"><i class="fas fa-info-circle me-2"></i>28th Jun 2020</p></a>
-                </div>
-              </li>
-            </ul>
-            <ul class="list-group list-group-horizontal rounded-0 mb-2">
-              <li class="list-group-item d-flex align-items-center ps-0 pe-3 py-1 rounded-0 border-0 bg-transparent">
-                <div class="form-check">
-                  <input
-                    class="form-check-input me-0"
-                    type="checkbox"
-                    value=""
-                    id="flexCheckChecked3"
-                    aria-label="..."
-                  />
-                </div>
-              </li>
-              <li class="list-group-item px-3 py-1 d-flex align-items-center flex-grow-1 border-0 bg-transparent">
-                <p class="lead fw-normal mb-0 bg-light w-100 ms-n2 ps-2 py-1 rounded">Sign up for online course</p>
-              </li>
-              <li class="list-group-item ps-3 pe-0 py-1 rounded-0 border-0 bg-transparent">
-                <div class="d-flex flex-row justify-content-end mb-1">
-                  <a href="#!" class="text-danger" data-mdb-toggle="tooltip" title="Delete todo"><i class="fas fa-trash-alt"></i></a>
-                </div>
-                <div class="text-end text-muted">
-                  <a href="#!" class="text-muted" data-mdb-toggle="tooltip" title="Created date">
-                    <p class="small mb-0"><i class="fas fa-info-circle me-2"></i>28th Jun 2020</p></a>
-                </div>
-              </li>
-            </ul>
 
             {% endblock %}
           </div>
@@ -147,11 +63,3 @@
 <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
