--- a/templates/tasks/task_new.html
+++ b/templates/tasks/task_new.html
@@ -1,6 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'home.html' %}
+
+{% block title %}New Task{% endblock title %}
 {% block content %}
-<h1>New article</h1>
 <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Save</button>
