--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %}Task Detail{% endblock title %}
 {% block content %}
 {% load custom_tags %}
@@ -18,4 +18,5 @@
         Do it!
     {% endif %}
 </div>
+
 {% endblock content %}
