--- a/templates/categories/category_list.html
+++ b/templates/categories/category_list.html
@@ -1,30 +1,65 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %}Category List{% endblock title %}
 {% block content %}
+{% load custom_tags %}
 
-<div>
-    <h3>
-        Category List!
-    </h3>
-    <h5>
-        With task(s)
-    </h5>
-     {% for category in not_empty_category %}
-        <ul>
-            <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
-        </ul>
+<h5 class="mb-0"><i class="fas fa-tasks me-2 btn-success"></i>Category List</h5>
 
-        {% empty %}
-        There is no Category!
+<br>
+{% if not_empty_category%}
+<table class="table mb-0" style="padding:100px;">
+      <thead>
+        <tr>
+            <th  scope="col" style="width:90%">Category(s)</th>
+            <th  scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for category in not_empty_category %}
+        <tr class="fw-normal">
+          <th><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></th>
+            <td class="align-middle">
+                <a href="{% url 'ToDo:category_update' category.pk %}" data-mdb-toggle="tooltip" title="Done">
+                    <i class="fas fa-edit text-success me-3"></i></a>
 
-    {% endfor %}
-   <h5>
-        With no task
-    </h5>
-    {% for category in empty_category %}
-                <ul>
-                    <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
-                </ul>
-            {% endfor %}
-</div>
+                <a href="{% url 'ToDo:category_delete' category.pk %}" data-mdb-toggle="tooltip" title="Remove">
+                    <i class="fas fa-trash-alt text-danger"></i></a>
+            </td>
+        </tr>
+      {% endfor %}
+      </tbody>
+</table>
+{%else%}
+Empty
+{%endif%}
+<br>
+<br>
+
+
+{% if empty_category%}
+<table class="table mb-0">
+      <thead>
+        <tr>
+            <th  scope="col" style="width:90%">Empty Category(s)</th>
+            <th  scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for category in empty_category %}
+         <tr class="fw-normal">
+          <th><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></th>
+            <td class="align-middle">
+                <a href="{% url 'ToDo:category_update' category.pk %}" data-mdb-toggle="tooltip" title="Done">
+                    <i class="fas fa-edit text-success me-3"></i></a>
+
+                <a href="{% url 'ToDo:category_delete' category.pk %}" data-mdb-toggle="tooltip" title="Remove">
+                    <i class="fas fa-trash-alt text-danger"></i></a>
+            </td>
+        </tr>
+      {% endfor %}
+      </tbody>
+</table>
+{%else%}
+Empty
+{%endif%}
 {% endblock content %}
