--- a/templates/categories/category_update.html
+++ b/templates/categories/category_update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}New Category{% endblock title %}
+{% block title %}Update Category{% endblock title %}
 {% block content %}
-<h5 class="mb-0"><i class="fas fa-edit me-3 btn-success"></i>Add Article</h5>
+<h5 class="mb-0"><i class="fas fa-edit me-3 btn-success"></i>Edit Article</h5>
 <hr>
 <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
