--- a/templates/tasks/task_update.html
+++ b/templates/tasks/task_update.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}New Task{% endblock title %}
+{% block title %}Update Task{% endblock title %}
 {% block content %}
-<h5 class="mb-0"><i class="fas fa-edit me-3 btn-success"></i>Add Task</h5>
+
+<h5 class="mb-0"><i class="fas fa-edit me-3 btn-success"></i>Edit Task</h5>
 <hr>
 <form action="" method="post">{% csrf_token %}
         <table>
